# QPSolver

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  build_eigen.sh  codecov.yml  yeet.sh
.github/workflows/: configure.sh  docs.yml  main.yml  run_tests.sh  unit_tests.yml
docs/: Doxyfile  Makefile  conf.py
docs/_templates/: layout.html
docs/api/: C.rst  exit.rst  interfaces.rst  settings.rst
docs/citing/: index.rst
docs/codegen/: api.rst  build.rst  installation.rst
docs/html/: annotated.html  classes.html  cone_8c.html  cone_8c__incl.map  cone_8c__incl.md5  cone_8h.html  cone_8h__dep__incl.map  cone_8h__dep__incl.md5  cone_8h__incl.map  cone_8h__incl.md5  cone_8h_source.html  definitions_8h.html  definitions_8h__dep__incl.map  definitions_8h__dep__incl.md5  definitions_8h__incl.map  definitions_8h__incl.md5  definitions_8h_source.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  enums_8h.html  enums_8h__dep__incl.map  enums_8h__dep__incl.md5  enums_8h_source.html  equilibration_8c.html  equilibration_8c__incl.map  equilibration_8c__incl.md5  equilibration_8h.html  equilibration_8h__dep__incl.map  equilibration_8h__dep__incl.md5  equilibration_8h__incl.map  equilibration_8h__incl.md5  equilibration_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  (+113 more)
docs/install/: index.rst
docs/latex/: annotated.tex  cone_8c.tex  cone_8c__incl.md5  cone_8h.tex  cone_8h__dep__incl.md5  cone_8h__incl.md5  definitions_8h.tex  definitions_8h__dep__incl.md5  definitions_8h__incl.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  enums_8h.tex  files.tex  (+76 more)
include/: QP.hpp  QPSolver.hpp  utilities.hpp
src/: QP.cpp  main.cpp
tests/: catch.hpp  run_tests.cpp  test_eq_qp.hpp  test_ineq_qp.hpp  test_markowitz_portfolio.hpp  test_randomized_markowitz_portfolio.hpp  test_unconstrained.hpp
(+193 files in other folders)
